--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "handlebars": "^4.0.3",
     "handlebars-loader": "^1.1.1",
-    "moment": "^2.10.6",
     "node-sass": "^3.3.3",
     "postcss-cssnext": "^2.1.0",
     "postcss-loader": "^0.6.0",
@@ -37,11 +36,14 @@
     "npm": "3.x.x"
   },
   "dependencies": {
-    "dotenv": "^1.2.0",
-    "forever": "^0.15.1",
+    "handlebars": "^3.0.3",
     "hapi": "^10.0.1",
     "inert": "^3.0.1",
-    "lodash": "^3.10.1"
+    "vision": "^3.0.0",
+    "dotenv": "^1.2.0",
+    "lodash": "^3.10.1",
+    "joi": "^6.7.1",
+    "yar": "^4.2.0"
   },
   "license": "MIT"
 }
